--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
     <!--=============== CSS ===============-->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./CSS/styles.css">
 
     <title>TOPIA</title>
 </head>
@@ -47,10 +47,10 @@
                         <a href="#case" class="nav__link">Vião Guia</a>
                     </li>
                     <li class="nav__item">
-                        <a href="form.html" class="nav__link">Comprar</a>
+                        <a href="HTML/form.html" class="nav__link">Comprar</a>
                     </li>
                     <li class="nav__item">
-                        <a id="cadastro" href="form.html"  class="nav__link">Cadastre-se</a>
+                        <a id="cadastro" href="HTML/form.html"  class="nav__link">Cadastre-se</a>
                     </li>
                 </ul>
 
@@ -87,7 +87,7 @@
                             sonoras, receba assistência por voz, interaja intuitivamente e desfrute de áudio imersivo.
                             VisionFlex - veja mais, viva mais.
                         </p>
-                        <a href="teste.html" class="button button--flex">
+                        <a href="form.html" class="button button--flex">
                             <span class="button--flex">
                                 <i class="ri-shopping-bag-line button__icon"></i></i> Adicionar ao Carrinho
                             </span>
@@ -101,10 +101,10 @@
         <!--=============== PATROCINADOR ===============-->
         <section class="sponsor section">
             <div class="sponsor__container container grid">
-                <img src="img/sponsor1.png" alt="" class="sponsor__img">
-                <img src="img/sponsor2.png" alt="" class="sponsor__img">
-                <img src="img/sponsor3.png" alt="" class="sponsor__img">
-                <img src="img/sponsor4.png" alt="" class="sponsor__img">
+                <!-- <img src="img/sponsor1.png" alt="" class="sponsor__img"> -->
+                <!-- <img src="img/sponsor2.png" alt="" class="sponsor__img"> -->
+                <!-- <img src="img/sponsor3.png" alt="" class="sponsor__img"> -->
+                <!-- <img src="img/sponsor4.png" alt="" class="sponsor__img"> -->
             </div>
         </section>
 
@@ -151,7 +151,7 @@
 
             <div class="case__container container grid">
                 <div>
-                    <img src="img/case.png" alt="" class="case__img">
+                    <!-- <img src="img/case.png" alt="" class="case__img"> -->
                 </div>
 
                 <div class="case__data">
@@ -171,12 +171,12 @@
                 <div class="discount__animate">
                     <h2 class="discount__title">Explore os cantos mais <br> distantes</h2>
                     <p class="discount__description">Obtenha agora, até 50% de desconto.</p>
-                    <a href="teste.html" class="button button--flex">
+                    <a href="form.html" class="button button--flex">
                         <i class="ri-shopping-bag-line button__icon"></i> Compre agora
                     </a>
                 </div>
 
-                <img src="img/discount.png" alt="" class="discount__img">
+                <!-- <img src="img/discount.png" alt="" class="discount__img"> -->
             </div>
         </section>
 
@@ -196,7 +196,7 @@
 
                         <button class="button button--flex products__button">
                             <nav>
-                                <a href="teste.html">
+                                <a href="form.html">
                                     <i class="ri-shopping-bag-line button__icon" id="corbutton-icon" ></i>
                                 </a>
                             </nav>
@@ -205,14 +205,14 @@
                 </article>
                 <article class="products__card">
                     <div class="products__content">
-                        <img src="img/product2.png" alt="" class="products__img">
+                        <!-- <img src="img/product2.png" alt="" class="products__img"> -->
 
                         <h3 class="products__title">Preto Vermelho</h3>
                         <span class="products__price">$249</span>
 
                         <button class="button button--flex products__button">
                             <nav>
-                                <a href="teste.html">
+                                <a href="form.html">
                                     <i class="ri-shopping-bag-line button__icon" id="corbutton-icon" ></i>
                                 </a>
                             </nav>
@@ -221,14 +221,14 @@
                 </article>
                 <article class="products__card">
                     <div class="products__content">
-                        <img src="img/product3.png" alt="" class="products__img">
+                        <!-- <img src="img/product3.png" alt="" class="products__img"> -->
 
                         <h3 class="products__title">Preto Noturno</h3>
                         <span class="products__price">$249</span>
 
                         <button class="button button--flex products__button">
                             <nav>
-                                <a href="teste.html">
+                                <a href="form.html">
                                     <i class="ri-shopping-bag-line button__icon" id="corbutton-icon" ></i>
                                 </a>
                             </nav>
@@ -237,14 +237,14 @@
                 </article>
                 <article class="products__card">
                     <div class="products__content">
-                        <img src="img/product4.png" alt="" class="products__img">
+                        <!-- <img src="img/product4.png" alt="" class="products__img"> -->
 
                         <h3 class="products__title">Azul</h3>
                         <span class="products__price">$249</span>
 
                         <button class="button button--flex products__button">
                             <nav>
-                                <a href="teste.html">
+                                <a href="form.html">
                                     <i class="ri-shopping-bag-line button__icon" id="corbutton-icon" ></i>
                                 </a>
                             </nav>
@@ -254,14 +254,14 @@
 
                 <article class="products__card">
                     <div class="products__content">
-                        <img src="img/product5.png" alt="" class="products__img">
+                        <!-- <img src="img/product5.png" alt="" class="products__img"> -->
 
                         <h3 class="products__title">Cinza Crepúsculo</h3>
                         <span class="products__price">$249</span>
 
                         <button class="button button--flex products__button">
                             <nav>
-                                <a href="teste.html">
+                                <a href="form.html">
                                     <i class="ri-shopping-bag-line button__icon" id="corbutton-icon" ></i>
                                 </a>
                             </nav>
@@ -271,14 +271,14 @@
 
                 <article class="products__card">
                     <div class="products__content">
-                        <img src="img/product1.png" alt="" class="products__img">
+                        <!-- <img src="img/product1.png" alt="" class="products__img"> -->
 
                         <h3 class="products__title">Preto</h3>
                         <span class="products__price">$249</span>
 
                         <button class="button button--flex products__button">
                             <nav>
-                                <a href="teste.html">
+                                <a href="form.html">
                                     <i class="ri-shopping-bag-line button__icon" id="corbutton-icon" ></i>
                                 </a>
                             </nav>
@@ -370,7 +370,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
 
     <!--=============== JS PRINCIPAL ===============-->
-    <script src="main.js"></script>
+    <script src="./JS/main.js"></script>
 </body>
 
 </html>
