Salvando inicio do via cep

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--=============== FAVICON ===============-->
-    <!-- <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon"> -->
+    <link rel="shortcut icon" href="img/logo-olho.png" type="image/x-icon">
 
     <!--=============== ÍCONES REMIX ===============-->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
@@ -47,10 +47,10 @@
                         <a href="#case" class="nav__link">Vião Guia</a>
                     </li>
                     <li class="nav__item">
-                        <a href="HTML/form.html" class="nav__link">Comprar</a>
+                        <a href="HTML/CEP_TOPIA.html" class="nav__link">Comprar</a>
                     </li>
                     <li class="nav__item">
-                        <a id="cadastro" href="HTML/form.html"  class="nav__link">Cadastre-se</a>
+                        <a id="cadastro" href="/HTML/form.html"  class="nav__link">Cadastre-se</a>
                     </li>
                 </ul>
 
