--- a/HTML/CEP_TOPIA.html
+++ b/HTML/CEP_TOPIA.html
@@ -65,7 +65,44 @@
         </nav>
     </header>
 
-   
+    <main>
+        <div class="container_Cep">
+            <form id="address-form">
+                <div class="inputBox">
+                    <label for="cep-input">CEP</label>
+                    <input type="text" id="cep-input" name="cep">
+                </div>
+                <div class="inputBox">
+                    <label for="address-input">Endereço</label>
+                    <input type="text" id="address-input" name="address">
+                </div>
+                <div class="inputBox">
+                    <label for="street-number-input">Número</label>
+                    <input type="text" id="street-number-input" name="street_number">
+                </div>
+                <div class="inputBox">
+                    <label for="complement-input">Complemento</label>
+                    <input type="text" id="complement-input" name="complement">
+                </div>
+                <div class="inputBox">
+                    <label for="neighborhood-input">Bairro</label>
+                    <input type="text" id="neighborhood-input" name="neighborhood">
+                </div>
+                <div class="flexbox">
+                    <div class="inputBox">
+                        <label for="state-input">Estado</label>
+                        <input type="text" id="state-input" name="state">
+                    </div>
+                    <div class="inputBox">
+                        <label for="city-input">Cidade</label>
+                        <input type="text" id="city-input" name="city">
+                    </div>
+                </div>
+                <button type="submit">Enviar</button>
+            </form>
+            <a href="cartao.html" class="button-link">Ir para Cartão</a>
+        </div>
+    </main>
 
     <!--=============== RODAPÉ ===============-->
     <footer class="footer section">
