Pagina de cep 80% pronta

--- a/HTML/CEP_TOPIA.html
+++ b/HTML/CEP_TOPIA.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--=============== FAVICON ===============-->
-    <link rel="shortcut icon" href="img/logo-olho.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/logo-olho.png" type="image/x-icon">
 
     <!--=============== ÍCONES REMIX ===============-->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
@@ -38,19 +38,19 @@
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="#home" class="nav__link active-link">Home</a>
+                        <a href="../index.html" class="nav__link active-link">Home</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#specs" class="nav__link">Sobre</a>
+                        <a href="../index.html" class="nav__link">Sobre</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#case" class="nav__link">Vião Guia</a>
+                        <a href="../index.html" class="nav__link">Vião Guia</a>
                     </li>
                     <li class="nav__item">
-                        <a href="HTML/form.html" class="nav__link">Comprar</a>
+                        <a href="../HTML/CEP_TOPIA.html" class="nav__link">Consultar Especialista</a>
                     </li>
                     <li class="nav__item">
-                        <a id="cadastro" href="HTML/form.html"  class="nav__link">Cadastre-se</a>
+                        <a id="cadastro" href="../HTML/form.html"  class="nav__link">Cadastre-se</a>
                     </li>
                 </ul>
 
@@ -98,9 +98,9 @@
                         <input type="text" id="city-input" name="city">
                     </div>
                 </div>
-                <button type="submit">Enviar</button>
+                <button type="submit">Calcular Rota</button>
             </form>
-            <a href="cartao.html" class="button-link">Ir para Cartão</a>
+            <a href="../index.html" class="button-link">Voltar para a pagina inicial</a>
         </div>
     </main>
 
@@ -113,16 +113,16 @@
 
                 <ul class="footer__links">
                     <li>
-                        <a href="#" class="footer__link">Óculos</a>
+                        <a href="../index.html" class="footer__link">Óculos</a>
                     </li>
                     <li>
-                        <a href="#" class="footer__link">Fones de ouvido</a>
+                        <a href="../index.html" class="footer__link">Fones de ouvido</a>
                     </li>
                     <li>
-                        <a href="#" class="footer__link">Fones de ouvido</a>
+                        <a href="../index.html" class="footer__link">Fones de ouvido</a>
                     </li>
                     <li>
-                        <a href="#" class="footer__link">Acessórios VisuGlam</a>
+                        <a href="../index.html" class="footer__link">Acessórios VisuGlam</a>
                     </li>
                 </ul>
             </div>
@@ -132,16 +132,16 @@
 
                 <ul class="footer__links">
                     <li>
-                        <a href="#" class="footer__link">Ajuda do produto</a>
+                        <a href="../index.html" class="footer__link">Ajuda do produto</a>
                     </li>
                     <li>
-                        <a href="#" class="footer__link">Registro</a>
+                        <a href="../index.html" class="footer__link">Registro</a>
                     </li>
                     <li>
-                        <a href="#" class="footer__link">Atualizações</a>
+                        <a href="../index.html" class="footer__link">Atualizações</a>
                     </li>
                     <li>
-                        <a href="#" class="footer__link">Ofertas</a>
+                        <a href="../index.html" class="footer__link">Ofertas</a>
                     </li>
                 </ul>
             </div>
