--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <a href="#case" class="nav__link">Vião Guia</a>
                     </li>
                     <li class="nav__item">
-                        <a href="HTML/CEP_TOPIA.html" class="nav__link">Comprar</a>
+                        <a href="HTML/CEP_TOPIA.html" class="nav__link">Consultar Especialista</a>
                     </li>
                     <li class="nav__item">
                         <a id="cadastro" href="/HTML/form.html"  class="nav__link">Cadastre-se</a>
