--- a/index.html
+++ b/index.html
@@ -288,6 +288,10 @@
 
             </div>
         </section>
+        <section>
+            <h2>lhjmjvfkjuglg</h2>
+            <img src="./oculos1-removebg-preview.png" alt="">
+        </section>
     </main>
 
     <!--=============== RODAPÉ ===============-->
