--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <a href="HTML/CEP_TOPIA.html" class="nav__link">Consultar Especialista</a>
                     </li>
                     <li class="nav__item">
-                        <a id="cadastro" href="/HTML/form.html"  class="nav__link">Cadastre-se</a>
+                        <a id="cadastro" href="/HTML/topia.html"  class="nav__link">Sobre a Topia</a>
                     </li>
                 </ul>
 
@@ -196,7 +196,7 @@
 
                         <button class="button button--flex products__button">
                             <nav>
-                                <a href="form.html">
+                                <a href="HTML/produtos.html">
                                     <i class="ri-shopping-bag-line button__icon" id="corbutton-icon" ></i>
                                 </a>
                             </nav>
@@ -212,7 +212,7 @@
 
                         <button class="button button--flex products__button">
                             <nav>
-                                <a href="form.html">
+                                <a href="/HTML/produtos.html">
                                     <i class="ri-shopping-bag-line button__icon" id="corbutton-icon" ></i>
                                 </a>
                             </nav>
@@ -228,7 +228,7 @@
 
                         <button class="button button--flex products__button">
                             <nav>
-                                <a href="form.html">
+                                <a href="/HTML/produtos.html">
                                     <i class="ri-shopping-bag-line button__icon" id="corbutton-icon" ></i>
                                 </a>
                             </nav>
@@ -244,7 +244,7 @@
 
                         <button class="button button--flex products__button">
                             <nav>
-                                <a href="form.html">
+                                <a href="/HTML/produtos.html">
                                     <i class="ri-shopping-bag-line button__icon" id="corbutton-icon" ></i>
                                 </a>
                             </nav>
@@ -261,7 +261,7 @@
 
                         <button class="button button--flex products__button">
                             <nav>
-                                <a href="form.html">
+                                <a href="/HTML/produtos.html">
                                     <i class="ri-shopping-bag-line button__icon" id="corbutton-icon" ></i>
                                 </a>
                             </nav>
@@ -278,7 +278,7 @@
 
                         <button class="button button--flex products__button">
                             <nav>
-                                <a href="form.html">
+                                <a href="/HTML/produtos.html">
                                     <i class="ri-shopping-bag-line button__icon" id="corbutton-icon" ></i>
                                 </a>
                             </nav>
@@ -288,10 +288,10 @@
 
             </div>
         </section>
-        <section>
+        <!-- <section>
             <h2>lhjmjvfkjuglg</h2>
             <img src="./oculos1-removebg-preview.png" alt="">
-        </section>
+        </section> -->
     </main>
 
     <!--=============== RODAPÉ ===============-->
@@ -340,7 +340,7 @@
                 <form action="" class="footer__form">
                     <input type="email" placeholder="E-mail" class="footer__input">
                     <button class="button button--flex">
-                        <i class="ri-send-plane-line button__icon"></i> Inscrever-se
+                        <i class="ri-send-plane-line button__icon"></i>Inscrever-se
                     </button>
                 </form>
 
