Adicionei imagens e alterei nomes dos produtos

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <section class="home section" id="home">
             <div class="home__container container grid">
                 <div>
-                    <img src="img/oculos-1-topia.png" alt="" class="home__img">
+                    <img src="./img/oculos_principal (2).png" alt="" class="home__img">
                 </div>
 
                 <div class="home__data">
@@ -151,7 +151,7 @@
 
             <div class="case__container container grid">
                 <div>
-                    <!-- <img src="img/case.png" alt="" class="case__img"> -->
+                    <img src="img/case_topia.png" alt="" class="case__img"> 
                 </div>
 
                 <div class="case__data">
@@ -189,9 +189,9 @@
             <div class="products__container container grid">
                 <article class="products__card">
                     <div class="products__content">
-                        <img src="oculos1-removebg-preview.png" alt="" class="products__img">
+                        <img src="./img/produto1.png" alt="" class="products__img">
 
-                        <h3 class="products__title">Preto</h3>
+                        <h3 class="products__title">VisionFlex</h3>
                         <span class="products__price">$249</span>
 
                         <button class="button button--flex products__button">
@@ -205,9 +205,9 @@
                 </article>
                 <article class="products__card">
                     <div class="products__content">
-                        <!-- <img src="img/product2.png" alt="" class="products__img"> -->
+                        <img src="img/produto2.png" alt="" class="products__img"> 
 
-                        <h3 class="products__title">Preto Vermelho</h3>
+                        <h3 class="products__title">Optix</h3>
                         <span class="products__price">$249</span>
 
                         <button class="button button--flex products__button">
@@ -221,7 +221,7 @@
                 </article>
                 <article class="products__card">
                     <div class="products__content">
-                        <!-- <img src="img/product3.png" alt="" class="products__img"> -->
+                        <img src="img/produto3.png" alt="" class="products__img"> 
 
                         <h3 class="products__title">Preto Noturno</h3>
                         <span class="products__price">$249</span>
@@ -237,9 +237,9 @@
                 </article>
                 <article class="products__card">
                     <div class="products__content">
-                        <!-- <img src="img/product4.png" alt="" class="products__img"> -->
+                        <img src="img/produto4.png" alt="" class="products__img"> 
 
-                        <h3 class="products__title">Azul</h3>
+                        <h3 class="products__title">Lensa</h3>
                         <span class="products__price">$249</span>
 
                         <button class="button button--flex products__button">
@@ -254,9 +254,9 @@
 
                 <article class="products__card">
                     <div class="products__content">
-                        <!-- <img src="img/product5.png" alt="" class="products__img"> -->
+                         <img src="img/produto5.png" alt="" class="products__img"> 
 
-                        <h3 class="products__title">Cinza Crepúsculo</h3>
+                        <h3 class="products__title">Clarity</h3>
                         <span class="products__price">$249</span>
 
                         <button class="button button--flex products__button">
@@ -271,9 +271,9 @@
 
                 <article class="products__card">
                     <div class="products__content">
-                        <!-- <img src="img/product1.png" alt="" class="products__img"> -->
+                     <img src="img/produto6.png" alt="" class="products__img">
 
-                        <h3 class="products__title">Preto</h3>
+                        <h3 class="products__title">Spectra Marrom</h3>
                         <span class="products__price">$249</span>
 
                         <button class="button button--flex products__button">
