--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <a href="HTML/CEP_TOPIA.html" class="nav__link">Consultar Especialista</a>
                     </li>
                     <li class="nav__item">
-                        <a id="cadastro" href="/HTML/topia.html"  class="nav__link">Sobre a Topia</a>
+                        <a id="cadastro" href="HTML/topia.html"  class="nav__link">Sobre a Topia</a>
                     </li>
                 </ul>
 
