--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                     <li class="nav__item">
                         <a href="HTML/CEP_TOPIA.html" class="nav__link">Consultar Especialista</a>
                     </li>
-                    <li class="nav__item">
+                    <!-- <li class="nav__item">
                         <a id="cadastro" href="HTML/topia.html"  class="nav__link">Sobre a Topia</a>
-                    </li>
+                    </li> -->
                 </ul>
 
                 <div class="nav__close" id="nav-close">
