--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                         <a href="#case" class="nav__link">Vião Guia</a>
                     </li>
                     <li class="nav__item">
-                        <a href="HTML/CEP_TOPIA.html" class="nav__link">Consultar Especialista</a>
+                        <a href="HTML/CEP_TOPIA.html" class="nav__link">Comprar</a>
                     </li>
-                    <!-- <li class="nav__item">
-                        <a id="cadastro" href="HTML/topia.html"  class="nav__link">Sobre a Topia</a>
-                    </li> -->
+                    <li class="nav__item">
+                        <a id="cadastro" href="/HTML/form.html"  class="nav__link">Cadastre-se</a>
+                    </li>
                 </ul>
 
                 <div class="nav__close" id="nav-close">
@@ -70,7 +70,7 @@
         <section class="home section" id="home">
             <div class="home__container container grid">
                 <div>
-                    <img src="img/oculos-1-topia.png" alt="" class="home__img">
+                    <img src="./img/oculos_principal (2).png" alt="" class="home__img">
                 </div>
 
                 <div class="home__data">
@@ -151,7 +151,7 @@
 
             <div class="case__container container grid">
                 <div>
-                    <!-- <img src="img/case.png" alt="" class="case__img"> -->
+                    <img src="img/case_topia.png" alt="" class="case__img"> 
                 </div>
 
                 <div class="case__data">
@@ -189,14 +189,14 @@
             <div class="products__container container grid">
                 <article class="products__card">
                     <div class="products__content">
-                        <img src="oculos1-removebg-preview.png" alt="" class="products__img">
+                        <img src="./img/produto1.png" alt="" class="products__img">
 
-                        <h3 class="products__title">Preto</h3>
+                        <h3 class="products__title">VisionFlex</h3>
                         <span class="products__price">$249</span>
 
                         <button class="button button--flex products__button">
                             <nav>
-                                <a href="HTML/produtos.html">
+                                <a href="form.html">
                                     <i class="ri-shopping-bag-line button__icon" id="corbutton-icon" ></i>
                                 </a>
                             </nav>
@@ -205,14 +205,14 @@
                 </article>
                 <article class="products__card">
                     <div class="products__content">
-                        <!-- <img src="img/product2.png" alt="" class="products__img"> -->
+                        <img src="img/produto2.png" alt="" class="products__img"> 
 
-                        <h3 class="products__title">Preto Vermelho</h3>
+                        <h3 class="products__title">Optix</h3>
                         <span class="products__price">$249</span>
 
                         <button class="button button--flex products__button">
                             <nav>
-                                <a href="/HTML/produtos.html">
+                                <a href="form.html">
                                     <i class="ri-shopping-bag-line button__icon" id="corbutton-icon" ></i>
                                 </a>
                             </nav>
@@ -221,14 +221,14 @@
                 </article>
                 <article class="products__card">
                     <div class="products__content">
-                        <!-- <img src="img/product3.png" alt="" class="products__img"> -->
+                        <img src="img/produto3.png" alt="" class="products__img"> 
 
                         <h3 class="products__title">Preto Noturno</h3>
                         <span class="products__price">$249</span>
 
                         <button class="button button--flex products__button">
                             <nav>
-                                <a href="/HTML/produtos.html">
+                                <a href="form.html">
                                     <i class="ri-shopping-bag-line button__icon" id="corbutton-icon" ></i>
                                 </a>
                             </nav>
@@ -237,31 +237,14 @@
                 </article>
                 <article class="products__card">
                     <div class="products__content">
-                        <!-- <img src="img/product4.png" alt="" class="products__img"> -->
+                        <img src="img/produto4.png" alt="" class="products__img"> 
 
-                        <h3 class="products__title">Azul</h3>
+                        <h3 class="products__title">Lensa</h3>
                         <span class="products__price">$249</span>
 
                         <button class="button button--flex products__button">
                             <nav>
-                                <a href="/HTML/produtos.html">
-                                    <i class="ri-shopping-bag-line button__icon" id="corbutton-icon" ></i>
-                                </a>
-                            </nav>
-                        </button>
-                    </div>
-                </article>
-
-                <article class="products__card">
-                    <div class="products__content">
-                        <!-- <img src="img/product5.png" alt="" class="products__img"> -->
-
-                        <h3 class="products__title">Cinza Crepúsculo</h3>
-                        <span class="products__price">$249</span>
-
-                        <button class="button button--flex products__button">
-                            <nav>
-                                <a href="/HTML/produtos.html">
+                                <a href="form.html">
                                     <i class="ri-shopping-bag-line button__icon" id="corbutton-icon" ></i>
                                 </a>
                             </nav>
@@ -271,14 +254,31 @@
 
                 <article class="products__card">
                     <div class="products__content">
-                        <!-- <img src="img/product1.png" alt="" class="products__img"> -->
+                         <img src="img/produto5.png" alt="" class="products__img"> 
 
-                        <h3 class="products__title">Preto</h3>
+                        <h3 class="products__title">Clarity</h3>
                         <span class="products__price">$249</span>
 
                         <button class="button button--flex products__button">
                             <nav>
-                                <a href="/HTML/produtos.html">
+                                <a href="form.html">
+                                    <i class="ri-shopping-bag-line button__icon" id="corbutton-icon" ></i>
+                                </a>
+                            </nav>
+                        </button>
+                    </div>
+                </article>
+
+                <article class="products__card">
+                    <div class="products__content">
+                     <img src="img/produto6.png" alt="" class="products__img">
+
+                        <h3 class="products__title">Spectra Marrom</h3>
+                        <span class="products__price">$249</span>
+
+                        <button class="button button--flex products__button">
+                            <nav>
+                                <a href="form.html">
                                     <i class="ri-shopping-bag-line button__icon" id="corbutton-icon" ></i>
                                 </a>
                             </nav>
@@ -288,10 +288,6 @@
 
             </div>
         </section>
-        <!-- <section>
-            <h2>lhjmjvfkjuglg</h2>
-            <img src="./oculos1-removebg-preview.png" alt="">
-        </section> -->
     </main>
 
     <!--=============== RODAPÉ ===============-->
@@ -340,7 +336,7 @@
                 <form action="" class="footer__form">
                     <input type="email" placeholder="E-mail" class="footer__input">
                     <button class="button button--flex">
-                        <i class="ri-send-plane-line button__icon"></i>Inscrever-se
+                        <i class="ri-send-plane-line button__icon"></i> Inscrever-se
                     </button>
                 </form>
 
