--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <!--=============== FAVICON ===============-->
     <link rel="shortcut icon" href="img/logo-olho.png" type="image/x-icon">
 
+    <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+      </script>
+
     <!--=============== ÍCONES REMIX ===============-->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
@@ -370,6 +374,9 @@
     <script src="https://unpkg.com/scrollreveal"></script>
 
     <!--=============== JS PRINCIPAL ===============-->
+
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+   
     <script src="./JS/main.js"></script>
 </body>
 
