--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <!--=============== AUDIO ===============-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
+    <!--=============== ACESSIBILIDADE ===============-->
     <!-- <script src="https://cdn.userway.org/widget.js" data-account="9CZfRZ38Rp"></script> -->
-
 
     <title>TOPIA</title>
 </head>
@@ -396,6 +396,19 @@
     <a href="#" class="scrollup" id="scroll-up">
         <i class="ri-arrow-up-s-line scrollup__icon"></i>
     </a>
+
+    <!--=============== CHAT IA ===============-->
+    <script>
+        window.embeddedChatbotConfig = {
+            chatbotId: "mVOdLJiu4c5v0_G8SFC47",
+            domain: "www.chatbase.co"
+        }
+    </script>
+    <script src="https://www.chatbase.co/embed.min.js" chatbotId="mVOdLJiu4c5v0_G8SFC47" domain="www.chatbase.co" defer>
+    </script>
+
+<!-- <iframe src="https://www.chatbase.co/chatbot-iframe/mVOdLJiu4c5v0_G8SFC47" width="100%"
+style="height: 100%; min-height: 700px" frameborder="0"></iframe> -->
 
     <!--=============== SCROLL REVEAL ===============-->
     <script src="https://unpkg.com/scrollreveal"></script>
