--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <a href="HTML/CEP_TOPIA.html" class="nav__link">Comprar</a>
                     </li>
                     <li class="nav__item">
-                        <a id="cadastro" href="/HTML/topia.html"  class="nav__link">Sobre a Topia</a>
+                        <a id="cadastro" href="HTML/topia.html"  class="nav__link">Sobre a Topia</a>
                     </li>
                 </ul>
 
