salvando alterações novas

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <section class="home section" id="home">
             <div class="home__container container grid">
                 <div>
-                    <img src="./img/oculos_principal (2).png" alt="" class="home__img">
+                    <img src="oculos_carol.png" alt="" class="home__img">
                 </div>
 
                 <div class="home__data">
@@ -143,7 +143,8 @@
             <div class="specs__container container grid">
                 <div class="specs__content grid">
                     <div class="specs__data">
-                        <img class="ri-bluetooth-line specs__icon" src="" alt="">
+                        <img class="icon-fone" src="img/icon_fones.png" alt="">
+                
                         <h3 class="specs__title">Conexão</h3>
                         <span class="specs__subtitle">Bluetooth v5.2</span>
                     </div>
@@ -168,7 +169,7 @@
                 </div>
 
                 <div>
-                    <img src="oculos1-removebg-preview.png" alt="" class="specs__img">
+                    <img src="oculos_carol2.png" alt="" class="specs__img">
                 </div>
             </div>
         </section>
@@ -179,7 +180,7 @@
 
             <div class="case__container container grid">
                 <div>
-                    <img src="img/case_topia.png" alt="" class="case__img">
+                    <img src="capa_carol.png" alt="" class="case__img">
                 </div>
 
                 <div class="case__data">
@@ -331,16 +332,7 @@
                 <ul class="footer__links">
                     <li>
                         <a href="#" class="footer__link">Óculos</a>
-                    </li>
-                    <li>
-                        <a href="#" class="footer__link">Fones de ouvido</a>
-                    </li>
-                    <li>
-                        <a href="#" class="footer__link">Fones de ouvido</a>
-                    </li>
-                    <li>
-                        <a href="#" class="footer__link">Acessórios VisuGlam</a>
-                    </li>
+                    </li>  
                 </ul>
             </div>
 
